# ds-macro

./: .gitignore  CLAUDE.md  README.md  controller.py  exceptions.py  main.py  models.py  pyproject.toml  recorder.py  routines.py
ds_macro/: __init__.py  controller.py  exceptions.py  models.py  patterns.py  recorder.py  routines.py
tests/: test_balance_routines.py  test_controller.py  test_developer_experience.py  test_integration.py  test_patterns.py  test_recorder_integration.py
