[project]
name = "ds-cargo-analyze"
version = "0.1.0"
description = "Use an LLM to control player movements, extract useful insights in Death Stranding with plain english commands."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.0.0",
    "numpy==1.26.4",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "pynput>=1.7.7",
    "python-dotenv>=1.0.1",
    "setuptools>=75.8.0",
    "xdotool>=0.4.0",
]
